2003-11-17  Ethan Merritt <merritt@u.washington.edu>

	* term/xlib.trm src/term.h: Update xlib device to use the actual
	x11 driver routines, so the output will be identical.

2003-11-14  Ethan Merritt <merritt@u.washington.edu>

	* term/post.trm: Fix bug in enhanced text overprint mode;
	vertical offset of overprinted text is now honored as specified in
	the documentation.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/history.c (write_history): Typo fixed.

	* src/command.c (history_command): Better error message for the
	"history" command not being available for GNU readline.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS src/show.c docs/gnuplot.doc: Options {float | int} for 'show
	palette palette <n>', and let the output go to that of 'set print'.

	* src/command.h src/command.c: Let variables print_out and
	print_out_name be global instead of static.

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/axis.h src/axis.c src/plot3d.c: Renamed set_pm3d_zminmax() to
	set_cbminmax().

2003-11-13  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.h src/color.c src/getcolor.h src/getcolor.c src/gplt_x11.c
	src/show.c src/win/wgraph.c term/metapost.trm term/pdf.trm term/svg.trm:
	- New structure rgb255_color for uchar r,g,b.
	- Renamed color_from_gray() to rgb1_from_gray().
	- Renamed rgb_from_gray() to rgb255_from_gray().
	- New routine rgb255_from_rgb1().

2003-11-10  Ethan Merritt <merritt@u.washington.edu>

	* src/color.c: Don't try to set color of non-supporting terminals.

2003-11-06  Ethan Merritt <merritt@u.washington.edu>

	* configure.in, term/pdf.trm:  Test for and accommodate older
	versions of pdflib.

2003-11-01  Ethan Merritt <merritt@u.washington.edu>

	* term/x11.trm: Do not use %lg to printf doubles. Some compilers
	complain because it is not strict ANSIC.

2003-10-31  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/x11.trm src/gplt_x11.c: Added  #ifdef PIPE_IPC  where missing