@@ -1,3 +1,8 @@
+2003-11-18  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/color.c (cbtick_callback): Fixed position of nomirrored horizontal
+	color box tics.
+
 2003-11-17  Ethan Merritt <merritt@u.washington.edu>
 
 	* term/xlib.trm src/term.h: Update xlib device to use the actual
